force-app/main/default/objects/RC_Business_Event_Seen_By__c/RC_Business_Event_Seen_By__c.object-meta.xml
<CustomObject>
    <label>Business Event Seen By</label>
    <nameField>
        <displayFormat>BES-{0000000000}</displayFormat>
        <label>Business Event Seen By ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Event Seen By</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>