force-app/main/default/objects/RC_Business_Event_Seen_By__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <label>Alias</label>
    <length>8</length>
    <type>Text</type>
</CustomField>