force-app/main/default/objects/RC_Business_Event_Seen_By__c/fields/Business_Event__c.field-meta.xml
<CustomField>
    <fullName>Business_Event__c</fullName>
    <label>Business Event</label>
    <referenceTo>RC_Business_Event__c</referenceTo>
    <relationshipLabel>Business Event Seen By</relationshipLabel>
    <relationshipName>Business_Event_Seen_By</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>