force-app/main/default/objects/RC_Business_Event_Seen_By__c/fields/Seen_Date__c.field-meta.xml
<CustomField>
    <fullName>Seen_Date__c</fullName>
    <label>Seen Date</label>
    <type>Date</type>
</CustomField>