force-app/main/default/objects/RC_Business_Event_Seen_By__c/fields/Seen_Date_In_User_Time__c.field-meta.xml
<CustomField>
    <fullName>Seen_Date_In_User_Time__c</fullName>
    <label>Seen Date In User Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>