force-app/main/default/objects/RC_Business_Event_Seen_By__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Event__c</columns>
    <columns>Name__c</columns>
    <columns>Username__c</columns>
    <columns>Seen_Date__c</columns>
    <columns>Seen_Date_In_User_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>